Fix HTML formatting for estimated value display

--- a/index.html
+++ b/index.html
@@ -193,4 +193,4 @@
                             <div><span class="meta-label">Agency:</span>${opp.fullParentPathName || 'N/A'}</div>
                             <div><span class="meta-label">Posted:</span>${new Date(opp.postedDate).toLocaleDateString()}</div>
                             <div><span class="meta-label">Deadline:</span>${opp.responseDeadLine ? new Date(opp.responseDeadLine).toLocaleDateString() : 'N/A'}</div>
-                            ${opp.estimatedValue > 0 ? `<div><span class="meta-label">Est. Value:</span><span
+                            ${opp.estimatedValue > 0 ? `<div><span class="meta
